# DexterousCooperation

./: .gitignore  CMakeLists.txt  README.md  ThirdPartyLicenses.txt  pkgInfo.py  unittest.sh
cmake/: DexterousCooperationConfig.cmake.in  ExportDexterousCooperation.cmake
config/BoxTurning/: LBR.xml  TwoArmLBR.xml  cSimpleBox.xml  frustrum.stl  gRobo.xml  gSimpleBox.xml  sdh.xml
config/PolygonTurning/: cInvKin.xml  cLinda.xml  cPolyROS.xml  gDepthRenderObjects.xml  gInvKin.xml  gLindaMocap.xml  gPolyROS.xml  linda_59dof.xml
config/PolygonTurning/polygons/: README.txt
config/PoseGraph/ex0/: LBR.xml  cExample0.xml  gExample0.xml  gRobo.xml  sdh.xml  trajectory.xml
config/PoseGraph/ex1/: cExample1.xml  cHandDefined-3steps.xml  cHandDefined.xml  gBoxSurface.xml  gHumanModel.xml
config/PoseGraph/ex2/: cExample2.xml  cHandDefined.xml  gHandTraverse.xml  gRoboTraverse.xml
config/PoseGraph/ex3/: cExample3.xml  gBoxSurface.xml  gHumanModel.xml
config/PoseGraph/ex4/: cExample4.xml  cHandDefined.xml  gBoxSurface.xml  gHumanModel.xml
config/PoseGraph/ex5/: cExample5.xml  gScenario.xml  robot-body.xml  robot-leftLeg.xml  robot-rightLeg.xml
config/PoseGraph/ex6/: cExample6.xml  gDualArmShldr.xml  kinova_ulw2_sph_7dof.xml  scitos_base_right.xml
config/PoseGraph/mode1/: cAction.xml  cHandDefined.xml  cHandDefined2.xml  cHandDefinedCoupledJoints.xml  cHandDefinedExplicitConstraints.xml  cHandDefinedWithoutRobotModel.xml  gScenario.xml
config/WheelTurning/: cSimpleWheel.xml  gRobo.xml  gSimpleWheel.xml  gWheelPlannerModel.xml  sdh.xml
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  ExampleDcComponents.cpp  ExamplePolygonPlanner.cpp  ExamplePolygonPlanner.h  ExamplePoseGraph.cpp  ExamplePoseGraph.h  ExampleWheelPlanner.cpp  ExampleWheelPlanner.h
src/: CMakeLists.txt
src/DcCommon/: BoxObjectChanger.h  EcsHardwareComponents.cpp  EcsHardwareComponents.h  WheelNode.h
src/DcCore/: CMakeLists.txt  ColliderComponent.cpp  ColliderComponent.h  ComponentBase.h  EntityBase.cpp  EntityBase.h  GraphComponent.cpp  GraphComponent.h  GraphicsWindow.cpp  GraphicsWindow.h  IKComponent.cpp  IKComponent.h  JointGuiComponent.cpp  JointGuiComponent.h  NamedBodyForceDragger.h  PhysicsComponent.cpp  PhysicsComponent.h  TTSComponent.cpp  TTSComponent.h  TaskGuiComponent.cpp  TaskGuiComponent.h
src/DcEventGui/: CMakeLists.txt  EventGui.cpp  EventGui.h
src/DcIntention/: ActionProgressGraph.cpp  ActionProgressGraph.h  ActionProgressMonitor.cpp  ActionProgressMonitor.h  ActionProgressState.cpp  ActionProgressState.h  ActionProgressTransition.cpp  ActionProgressTransition.h  BoxObjectModel.cpp  BoxObjectModel.h  CMakeLists.txt  IntentionVisualizationComponent.h  ManipulationComponent.cpp  ManipulationComponent.h  MonitorComponent.cpp  MonitorComponent.h  MonitorRequest.cpp  MonitorRequest.h  MonitorRequestWidget.cpp  MonitorRequestWidget.h  MonitorWidgetBase.cpp  MonitorWidgetBase.h  ObjectModel.cpp  ObjectModel.h  RemoteVisualizationComponent.cpp  RemoteVisualizationComponent.h  StateEstimatorComponent.cpp  StateEstimatorComponent.h  WheelObjectModel.cpp  WheelObjectModel.h
src/DcPlanning/: BoxStrategy5D.cpp  BoxStrategy5D.h  CMakeLists.txt  DyadicMotionPlannerComponent.cpp  DyadicMotionPlannerComponent.h  DyadicTrajectorySet.cpp  DyadicTrajectorySet.h  DynamicPoseGraph.cpp  DynamicPoseGraph.h  JacoConstraint.cpp  JacoConstraint.h  PoseGraph.cpp  PoseGraph.h  TrajectoryComponent.cpp  TrajectoryComponent.h  TrajectoryPredictor.cpp  TrajectoryPredictor.h  WheelConstraint.cpp  WheelConstraint.h  WheelPlannerComponent.cpp  WheelPlannerComponent.h  WheelStrategy7D.cpp  WheelStrategy7D.h
src/DcROS/: CMakeLists.txt  ROSSpinnerComponent.cpp  ROSSpinnerComponent.h
src/DcROS/RcsROSMsg/: Box.h  BoxArray.h
src/DcVision/: CMakeLists.txt  DyadicPolygonObjectConstraint.cpp  DyadicPolygonObjectConstraint.h  ExampleVirtualKinect.cpp  PolyGraspDetector.cpp  PolyGraspDetector.h  PolyROSComponent.cpp  PolyROSComponent.h  PolygonContactPoint2D.cpp  PolygonContactPoint2D.h  PolygonObjectConstraint.cpp  PolygonObjectConstraint.h  PolygonObjectModel.cpp  PolygonObjectModel.h  PolygonObjectPlanner.cpp  PolygonObjectPlanner.h  README.md  RebaComponent.cpp  RebaComponent.h  VirtualKinect2.cpp  VirtualKinect2.h
src/Holo/: CMakeLists.txt  HoloAPI.cs  HoloClient.h  HoloComponent.cpp  HoloComponent.h  HoloGraph.cpp  HoloGraph.h  HoloNetworkConnection.cpp  HoloNetworkConnection.h  HoloParser.cpp  HoloParser.h  HoloStudyDataLogger.cpp  HoloStudyDataLogger.h  HoloTestComponent.cpp  HoloTestComponent.h
